--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Shop</title>
     <link type="text/css" rel="stylesheet" th:href="@{'/css/bootstrap.min.css'}">
     <script type="text/javascript" th:src="@{'/js/bootstrap.bundle.js'}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
