--- a/src/main/resources/templates/buy.html
+++ b/src/main/resources/templates/buy.html
@@ -539,6 +539,220 @@
             border:1px solid #000000;
         }
 
+        @font-face {
+            font-family:'TildaSans';
+            font-style:normal;
+            font-weight:250 1000;
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff2') format('woff2-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff') format('woff-variations');
+        }
+        @font-face {
+            font-family:'TildaSans';
+            font-style:normal;
+            font-weight:300;
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Light.eot');
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Light.eot?#iefix') format('embedded-opentype'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff2') format('woff2-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff') format('woff-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Light.woff2') format('woff2'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Light.woff') format('woff');
+        }
+        @font-face {
+            font-family:'TildaSans';
+            font-style:normal;
+            font-weight:400;
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Regular.eot');
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Regular.eot?#iefix') format('embedded-opentype'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff2') format('woff2-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff') format('woff-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Regular.woff2') format('woff2'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Regular.woff') format('woff');
+        }
+        @font-face {
+            font-family:'TildaSans';
+            font-style:normal;
+            font-weight:500;
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Medium.eot');
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Medium.eot?#iefix') format('embedded-opentype'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff2') format('woff2-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff') format('woff-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Medium.woff2') format('woff2'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Medium.woff') format('woff');
+        }
+        @font-face {
+            font-family:'TildaSans';
+            font-style:normal;
+            font-weight:600;
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Semibold.eot');
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Semibold.eot?#iefix') format('embedded-opentype'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff2') format('woff2-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff') format('woff-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Semibold.woff2') format('woff2'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Semibold.woff') format('woff');
+        }
+        @font-face {
+            font-family:'TildaSans';
+            font-style:normal;
+            font-weight:700;
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Bold.eot');
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Bold.eot?#iefix') format('embedded-opentype'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff2') format('woff2-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff') format('woff-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Bold.woff2') format('woff2'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Bold.woff') format('woff');
+        }
+        @font-face {
+            font-family:'TildaSans';
+            font-style:normal;
+            font-weight:800;
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Extrabold.eot');
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Extrabold.eot?#iefix') format('embedded-opentype'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff2') format('woff2-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff') format('woff-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Extrabold.woff2') format('woff2'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Extrabold.woff') format('woff');
+        }
+        @font-face {
+            font-family:'TildaSans';
+            font-style:normal;
+            font-weight:900;
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Black.eot');
+            src:url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Black.eot?#iefix') format('embedded-opentype'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff2') format('woff2-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-VF.woff') format('woff-variations'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Black.woff2') format('woff2'),
+            url('https://static.tildacdn.com/fonts/tildasans/TildaSans-Black.woff') format('woff');
+        }
+        body {
+            text-align:center;
+        }
+        * {
+            -webkit-box-sizing: content-box;
+            -moz-box-sizing: content-box;
+            box-sizing: content-box;
+        }
+
+        .t-submit {
+            font-family: 'TildaSans',Arial,sans-serif;
+        }
+
+        .t-submit {
+            text-align: center;
+            height: 60px;
+            border: 0 none;
+            font-size: 16px;
+            padding-left: 60px;
+            padding-right: 60px;
+            -webkit-appearance: none;
+            font-weight: 700;
+            white-space: nowrap;
+            background-image: none;
+            cursor: pointer;
+            margin: 0;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            outline: none;
+            background: transparent;
+        }
+
+        .t-submit  {
+            position: relative;
+        }
+
+        .t-submit  {
+            width: 100%;
+        }
+
+        #allrecords button {
+            outline: none;
+        }
+
+        *,:before,:after {
+            -webkit-box-sizing: content-box;
+            -moz-box-sizing: content-box;
+            box-sizing: content-box;
+        }
+
+
+        /* These were inline style tags. Uses id+class to override almost everything */
+        #style-t1D9W.style-t1D9W {
+            color: rgb(255, 255, 255);
+            background-color: rgb(0, 0, 0);
+            display: inline-block;
+        }
+
+        .cartBtn {
+            width: 155px;
+            height: 50px;
+            border: none;
+            border-radius: 0px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 7px;
+            color: white;
+            font-weight: 500;
+            position: relative;
+            background-color: rgb(29, 29, 29);
+            box-shadow: 0 20px 30px -7px rgba(27, 27, 27, 0.219);
+            transition: all 0.3s ease-in-out;
+            cursor: pointer;
+            overflow: hidden;
+        }
+
+        .cart {
+            z-index: 2;
+        }
+
+        .cartBtn:active {
+            transform: scale(0.96);
+        }
+
+        .product {
+            position: absolute;
+            width: 12px;
+            border-radius: 3px;
+            content: "";
+            left: 60px;
+            bottom: 23px;
+            opacity: 0;
+            z-index: 1;
+            fill: rgb(211, 211, 211);
+        }
+
+        .cartBtn:hover .product {
+            animation: slide-in-top 1.2s cubic-bezier(0.450, 0.460, 0.450, 0.940) both;
+        }
+
+        @keyframes slide-in-top {
+            0% {
+                transform: translateY(-30px);
+                opacity: 1;
+            }
+
+            100% {
+                transform: translateY(0) rotate(-330deg);
+                opacity: 1;
+            }
+        }
+
+        .cartBtn:hover .cart {
+            animation: slide-in-left 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        }
+
+        @keyframes slide-in-left {
+            0% {
+                transform: translateX(-10px);
+                opacity: 0;
+            }
+
+            100% {
+                transform: translateX(0);
+                opacity: 1;
+            }
+        }
+
     </style>
 </head>
 <body>
@@ -562,15 +776,7 @@
                 </a>
             </div>
             <div class="t706__product-plusminus t-descr t-descr_sm">
-        <span class="t706__product-minus">
-          <img src="https://static.tildacdn.com/lib/linea/c8eecd27-9482-6c4f-7896-3eb09f6a1091/arrows_circle_minus.svg" id="style-8c3ff" class="style-8c3ff">
-        </span>
-                <span class="t706__product-quantity">
-          1
-        </span>
-                <span class="t706__product-plus">
-          <img src="https://static.tildacdn.com/lib/linea/c47d1e0c-6880-dc39-ae34-521197f7fba7/arrows_circle_plus.svg" id="style-n9hoU" class="style-n9hoU">
-        </span>
+
             </div>
             <div class="t706__product-amount t-descr t-descr_sm">
                 <div class="t706__cartwin-prodamount-price" th:text="${itm.price}">
@@ -579,11 +785,7 @@
                     &#8376;
                 </div>
             </div>
-            <div class="t706__product-del-wrapper style-lpIYQ" id="style-lpIYQ">
-        <span class="t706__product-del">
-          <img src="https://static.tildacdn.com/lib/linea/1bec3cd7-e9d1-2879-5880-19b597ef9f1a/arrows_circle_remove.svg" id="style-EfUvi" class="style-EfUvi">
-        </span>
-            </div>
+
         </div>
     </div>
     <div class="t706__cartwin-bottom">
@@ -610,7 +812,7 @@
                         Your name
                     </label>
                     <div class="t-input-block ">
-                        <input type="text" autocomplete="name" name="name" id="input_1496239431201"  class="t-input js-tilda-rule  style-mTPoK" value="" data-tilda-req="1" aria-required="true" data-tilda-rule="name" aria-describedby="error_1496239431201">
+                        <input type="text" autocomplete="name" name="name" id="input_1496239431201"  class="t-input js-tilda-rule  style-mTPoK" value="" data-tilda-req="1" aria-required="true" data-tilda-rule="name" aria-describedby="error_1496239431201" required>
                         <div class="t-input-error" aria-live="polite" id="error_1496239431201">
                         </div>
                     </div>
@@ -620,7 +822,7 @@
                         Your E-mail
                     </label>
                     <div class="t-input-block ">
-                        <input type="email" autocomplete="email" name="email" id="input_1496239459190" class="t-input js-tilda-rule  style-q5qoH" value="" data-tilda-req="1" aria-required="true" data-tilda-rule="email" aria-describedby="error_1496239459190">
+                        <input type="email" autocomplete="email" name="email" id="input_1496239459190" class="t-input js-tilda-rule  style-q5qoH" value="" data-tilda-req="1" aria-required="true" data-tilda-rule="email" aria-describedby="error_1496239459190" required>
                         <div class="t-input-error" aria-live="polite" id="error_1496239459190">
                         </div>
                     </div>
@@ -630,22 +832,21 @@
                         Your phone number
                     </label>
                     <div class="t-input-block ">
-                        <input type="tel" autocomplete="tel" name="phone" id="input_1496239478607" class="t-input js-tilda-rule  style-l899t" value="" data-tilda-req="1" aria-required="true" data-tilda-rule="phone" pattern="[0-9]*" aria-describedby="error_1496239478607">
+                        <input type="tel" autocomplete="tel" name="phone" id="input_1496239478607" class="t-input js-tilda-rule  style-l899t" value="" data-tilda-req="1" aria-required="true" data-tilda-rule="phone" pattern="[0-9]*" aria-describedby="error_1496239478607" required>
                         <div class="t-input-error" aria-live="polite" id="error_1496239478607">
                         </div>
                     </div>
                 </div>
 
                 <div class="t-form__submit">
-                    <button type="submit" class="t-submit style-7m3m6" data-field="buttontitle" data-buttonfieldset="button" id="style-7m3m6">
+                    <button class="cartBtn mx-auto">
+                        <svg class="cart" fill="white" viewBox="0 0 576 512" height="1em" xmlns="http://www.w3.org/2000/svg"><path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path></svg>
                         BUY
+                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512" class="product"><path d="M211.8 0c7.8 0 14.3 5.7 16.7 13.2C240.8 51.9 277.1 80 320 80s79.2-28.1 91.5-66.8C413.9 5.7 420.4 0 428.2 0h12.6c22.5 0 44.2 7.9 61.5 22.3L628.5 127.4c6.6 5.5 10.7 13.5 11.4 22.1s-2.1 17.1-7.8 23.6l-56 64c-11.4 13.1-31.2 14.6-44.6 3.5L480 197.7V448c0 35.3-28.7 64-64 64H224c-35.3 0-64-28.7-64-64V197.7l-51.5 42.9c-13.3 11.1-33.1 9.6-44.6-3.5l-56-64c-5.7-6.5-8.5-15-7.8-23.6s4.8-16.6 11.4-22.1L137.7 22.3C155 7.9 176.7 0 199.2 0h12.6z"></path></svg>
                     </button>
                 </div>
             </div>
 
-        <div th:if="${param.success}" class="success-message">
-            <p>Ваш заказ успешно размещен!</p>
-        </div>
         </form>
 
 </div>
